@@ -1,3 +1,9 @@
+2002-08-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* win/tclWinThrd.c (TclpFinalizeThreadData, TclWinFreeAllocCache):
+	  Applied patch for bug #599428, provided by Miguel Sofer
+	  <msofer@users.sourceforge.net>.
+
 2002-08-28  David Gravereaux <davygrvy@pobox.com>
 
 	* generic/tclEnv.c:
